samples/_failures_safe/1761533279_ffd627_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df397548.c: In function ‘print_token’:
./samples/SAFE/__tmp_df397548.c:176:25: error: expected declaration or statement at end of input
  176 | void print_token(struct Token token) {
      |                         ^~~~~
